--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
 li {
   border-style: solid;
   border-radius: 10px;
-  border-color: mediumpurple;
+  border-color: rgb(185, 209, 247);
   padding: 5px;
+  margin-bottom: 8px;
   text-decoration: none;
-  background-color: violet;
+  background-color: rgb(14, 44, 124);
   text-align: center;
 }
 
@@ -20,8 +21,13 @@ h1 {
 }
 
 #earth {
-  color: #6a94c5;
+  color: #adcdf1;
   text-shadow: 3px 2px #555d62;
+}
+
+#copyright-text {
+  font-size: 0.6em;
+  font-weight: bold;
 }
 
 .grid-container {
@@ -35,6 +41,11 @@ h1 {
 
 nav ul {
   list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 header {
@@ -71,6 +82,6 @@ footer {
 img {
   width: 300px;
   border-style: solid;
-  border-color: #8c64ed;
+  border-color: #5468cc;
   border-radius: 40px;
 }
