--- a/imaginary-shop/style.css
+++ b/imaginary-shop/style.css
@@ -16,6 +16,11 @@ img {
   display: block;
 }
 
+.offscreen {
+  position: absolute;
+  left: -10000px;
+}
+
 /* ========== Header ============ */
 
 .header {
@@ -47,7 +52,7 @@ img {
   padding: 16px 0;
 }
 
-.header__logo p {
+.icon {
   font-size: 40px;
   padding: 2px 10px;
 }
@@ -144,13 +149,17 @@ a {
 
 .menu-btn {
   background-color: orange;
-  color: white;
   border-radius: 30px;
   padding: 20px;
   min-width: 150px;
   border: none;
   font-weight: bold;
-  font-size: 15px;
+}
+
+.menu-btn__link {
+  color: white;
+  font-size: 20px;
+  text-shadow: 1px 1px 1px #000000;
 }
 
 /* ========== About us ============ */
@@ -263,7 +272,7 @@ a {
   text-align: center;
 }
 
-.newsletter p {
+.newsletter h3 {
   color: white;
   font-size: 20px;
   font-weight: bold;
@@ -297,6 +306,7 @@ a {
   padding: 0 15px;
   font-size: 15px;
   font-weight: bold;
+  text-shadow: 1px 1px 1px #000000;
   color: white;
   background: orange;
   border-radius: 36px;
@@ -413,6 +423,7 @@ textarea {
 .submit-btn {
   background-color: orange;
   color: white;
+  text-shadow: 1px 1px 1px #000000;
   font-weight: bold;
   padding: 12px 20px;
   border: none;
@@ -426,7 +437,6 @@ textarea {
   background-color: #ac2930;
   padding: 30px;
   width: 95%;
-  color: #fff0de;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -453,7 +463,7 @@ textarea {
     background-color: white;
   }
 
-  .header__logo p {
+  .icon {
     background-color: #ac2930;
     border-radius: 100%;
     padding: 5px 12px;
