--- a/imaginary-shop/style.css
+++ b/imaginary-shop/style.css
@@ -160,7 +160,7 @@ a {
 .menu-btn__link {
   color: white;
   font-size: 20px;
-  text-shadow: 1px 1px 1px #000000;
+  text-shadow: 1px 2px 4px #000000;
 }
 
 /* ========== About us ============ */
@@ -424,8 +424,9 @@ textarea {
 .submit-btn {
   background-color: orange;
   color: white;
-    text-shadow: 1px 2px 4px #000000;
+  text-shadow: 1px 2px 4px #000000;
   font-family: "Times New Roman", Times, serif;
+  font-size: 18px;
   font-weight: bold;
   padding: 12px 20px;
   border: none;
