--- a/imaginary-shop/style.css
+++ b/imaginary-shop/style.css
@@ -305,9 +305,10 @@ a {
 
 .newsletter__form button {
   padding: 0 15px;
-  font-size: 15px;
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
   font-weight: bold;
-  text-shadow: 1px 1px 1px #000000;
+  text-shadow: 1px 1px 5px #000000;
   color: white;
   background: orange;
   border-radius: 36px;
